# here_is_johnny_c2

./: CMakeLists.txt  LICENSE  README.md  main.c
include/app/: app.h
include/app/commands/: packet_capture.h  port_knocking.h  system_util.h
include/app/connection/: connection.h
include/app/menu/: command_menu.h  command_menu_processor.h  main_menu.h  main_menu_processor.h  util.h
include/lib/crypto/: crypto.h
include/lib/packet_builder/: packet_builder.h
include/lib/packet_sniffer/: file_data_processor.h  network_info.h  packet_handler.h  packet_processor.h  packet_sniffer.h
include/lib/upk/: upk.h
include/lib/utils/: file_util.h  system_util.h
src/app/: app.c
src/app/commands/: packet_capture.c  port_knocking.c  system_util.c
src/app/connection/: connection.c
src/app/menu/: command_menu.c  command_menu_processor.c  main_menu.c  main_menu_processor.c  util.c
src/lib/crypto/: crypto.c
src/lib/packet_builder/: packet_builder.c
src/lib/packet_sniffer/: file_data_processor.c  network_info.c  packet_handler.c  packet_processor.c  packet_sniffer.c
src/lib/upk/: upk.c
src/lib/utils/: file_util.c  system_util.c
